# TG-AC

./: .gitignore  CMakeLists.txt  README.md  example.json  main.cpp
doc/: midterm.pptx  proposal.pptx
include/: Attribute.hpp  BufferWriter.hpp  DeltaOutDistribution.hpp  Distribution.hpp  Generation.hpp  LogNormal.hpp  Normal.hpp  OutDegreeDistribution.hpp  OutLogNormal.hpp  OutNormal.hpp  OutPowerLaw.hpp  PowerLaw.hpp  Random.hpp  Store.hpp  Timestamp.hpp  Uniform.hpp  Utility.hpp  headers.hpp  types.hpp
src/: Attribute.cpp  BufferWriter.cpp  DeltaOutDistribution.cpp  Distribution.cpp  Generation.cpp  OutDegreeDistribution.cpp  Utility.cpp
temp_attr/include/: gen_attribute.hpp
temp_attr/src/: gen_attribute.cpp
